# ghd-manager

./: .env.example  CLAUDE.md  Cargo.toml  README.md  requirements.md
src/: app_manager.rs  auth.rs  config.rs  docker.rs  error.rs  git.rs  main.rs  package_manager.rs  routes.rs  webhook.rs
templates/: base.html  dashboard.html  login.html
