[package]
name = "github-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Docker SDK
bollard = "0.17"

# Authentication & Sessions
tower-sessions = "0.13"
tower-sessions-memory-store = "0.13"
bcrypt = "0.15"
chrono = "0.4"

# HTML templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
